{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 32,
  "lineage": "82d54cbc-7bf8-1fd9-4dfe-71e1a058f5ec",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a8987be7338da109",
            "domain": "vpc",
            "id": "eipalloc-0a8987be7338da109",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-92-236-11.compute-1.amazonaws.com",
            "public_ip": "54.92.236.11",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03fed0e32401a2414",
            "domain": "vpc",
            "id": "eipalloc-03fed0e32401a2414",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-195-123-165.compute-1.amazonaws.com",
            "public_ip": "44.195.123.165",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:349757005520:internet-gateway/igw-0d1f0145b242c5808",
            "id": "igw-0d1f0145b242c5808",
            "owner_id": "349757005520",
            "tags": {
              "Name": "Internet-gateway"
            },
            "tags_all": {
              "Name": "Internet-gateway"
            },
            "vpc_id": "vpc-086936d66bc191815"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a8987be7338da109",
            "association_id": "eipassoc-04aa7b126e545a434",
            "connectivity_type": "public",
            "id": "nat-09f7b3ae3d5e639fb",
            "network_interface_id": "eni-029020500ecf547b9",
            "private_ip": "10.0.1.179",
            "public_ip": "54.92.236.11",
            "subnet_id": "subnet-069dc8218aaf26951",
            "tags": {
              "Name": "nat-gateway-public-subnet-1a"
            },
            "tags_all": {
              "Name": "nat-gateway-public-subnet-1a"
            }
          },
          "dependencies": [
            "data.aws_region.current",
            "module.network.aws_eip.elastic_ip_1a",
            "module.network.aws_subnet.pub-subnet-1a",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03fed0e32401a2414",
            "association_id": "eipassoc-0f59e6091166a3155",
            "connectivity_type": "public",
            "id": "nat-0b7b1ec1037f0beb9",
            "network_interface_id": "eni-0bd77a4ceb127f026",
            "private_ip": "10.0.2.122",
            "public_ip": "44.195.123.165",
            "subnet_id": "subnet-0a555fde49265910a",
            "tags": {
              "Name": "nat-gateway-public-subnet-1b"
            },
            "tags_all": {
              "Name": "nat-gateway-public-subnet-1b"
            }
          },
          "dependencies": [
            "data.aws_region.current",
            "module.network.aws_eip.elastic_ip_1b",
            "module.network.aws_subnet.pub-subnet-1b",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:349757005520:route-table/rtb-07b6a5f84e2271995",
            "id": "rtb-07b6a5f84e2271995",
            "owner_id": "349757005520",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09f7b3ae3d5e639fb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "priv-route-table-1a"
            },
            "tags_all": {
              "Name": "priv-route-table-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-086936d66bc191815"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_region.current",
            "module.network.aws_eip.elastic_ip_1a",
            "module.network.aws_nat_gateway.nat_gateway_1a",
            "module.network.aws_subnet.pub-subnet-1a",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:349757005520:route-table/rtb-01a9f442dba75b8f6",
            "id": "rtb-01a9f442dba75b8f6",
            "owner_id": "349757005520",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b7b1ec1037f0beb9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "priv-route-table-1b"
            },
            "tags_all": {
              "Name": "priv-route-table-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-086936d66bc191815"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_region.current",
            "module.network.aws_eip.elastic_ip_1b",
            "module.network.aws_nat_gateway.nat_gateway_1b",
            "module.network.aws_subnet.pub-subnet-1b",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:349757005520:route-table/rtb-003daa81911e47187",
            "id": "rtb-003daa81911e47187",
            "owner_id": "349757005520",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d1f0145b242c5808",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub-route-table"
            },
            "tags_all": {
              "Name": "pub-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-086936d66bc191815"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_assoc_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060583a0df10fb570",
            "route_table_id": "rtb-07b6a5f84e2271995",
            "subnet_id": "subnet-07d94c0c83a267c4e"
          },
          "dependencies": [
            "data.aws_region.current",
            "module.network.aws_eip.elastic_ip_1a",
            "module.network.aws_nat_gateway.nat_gateway_1a",
            "module.network.aws_route_table.private_route_table_1a",
            "module.network.aws_subnet.priv_subnet_1a",
            "module.network.aws_subnet.pub-subnet-1a",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_assoc_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033717d7c3f52c738",
            "route_table_id": "rtb-01a9f442dba75b8f6",
            "subnet_id": "subnet-027c0ded24e3b0e86"
          },
          "dependencies": [
            "data.aws_region.current",
            "module.network.aws_eip.elastic_ip_1b",
            "module.network.aws_nat_gateway.nat_gateway_1b",
            "module.network.aws_route_table.private_route_table_1b",
            "module.network.aws_subnet.priv_subnet_1b",
            "module.network.aws_subnet.pub-subnet-1b",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_assoc_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c3c3976c130e353",
            "route_table_id": "rtb-003daa81911e47187",
            "subnet_id": "subnet-069dc8218aaf26951"
          },
          "dependencies": [
            "data.aws_region.current",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.pub-subnet-1a",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_assoc_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f6e224bbc532e66",
            "route_table_id": "rtb-003daa81911e47187",
            "subnet_id": "subnet-0a555fde49265910a"
          },
          "dependencies": [
            "data.aws_region.current",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.pub-subnet-1b",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:349757005520:subnet/subnet-07d94c0c83a267c4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d94c0c83a267c4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "349757005520",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1a"
            },
            "tags_all": {
              "Name": "private-subnet-1a"
            },
            "vpc_id": "vpc-086936d66bc191815"
          },
          "dependencies": [
            "data.aws_region.current",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:349757005520:subnet/subnet-027c0ded24e3b0e86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027c0ded24e3b0e86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "349757005520",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1b"
            },
            "tags_all": {
              "Name": "private-subnet-1b"
            },
            "vpc_id": "vpc-086936d66bc191815"
          },
          "dependencies": [
            "data.aws_region.current",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:349757005520:subnet/subnet-069dc8218aaf26951",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069dc8218aaf26951",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "349757005520",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1a"
            },
            "tags_all": {
              "Name": "public-subnet-1a"
            },
            "vpc_id": "vpc-086936d66bc191815"
          },
          "dependencies": [
            "data.aws_region.current",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:349757005520:subnet/subnet-0a555fde49265910a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a555fde49265910a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "349757005520",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1b"
            },
            "tags_all": {
              "Name": "public-subnet-1b"
            },
            "vpc_id": "vpc-086936d66bc191815"
          },
          "dependencies": [
            "data.aws_region.current",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:349757005520:vpc/vpc-086936d66bc191815",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-091a2410739ff1e9d",
            "default_route_table_id": "rtb-052d46a1953dbf53e",
            "default_security_group_id": "sg-0134bb42137a1b4db",
            "dhcp_options_id": "dopt-08199a71e143cb94d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-086936d66bc191815",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-052d46a1953dbf53e",
            "owner_id": "349757005520"
          }
        }
      ]
    }
  ]
}